<resources>
    <string name="app_name">Boticario</string>

    <!-- Strings related to sign up -->
    <string name="username">E-mail</string>
    <string name="name">Nome</string>
    <string name="open">Fechar</string>
    <string name="close">Abrir</string>
    <string name="password">Senha</string>
    <string name="btn_sign_up">Entrar</string>
    <string name="btn_sign_in">Criar conta</string>
    <string name="btn_continue">Continuar</string>
    <string name="logoff">Sair</string>
    <string name="publish">Publicar</string>

    <!-- Strings related to validation -->
    <string name="validation_no_password">Preencha a senha</string>
    <string name="validation_invalid_password">Senha inválida. Sua senha deve ter no mínimo 6 dígitos.</string>
    <string name="validation_no_name">Preencha um nome</string>
    <string name="validation_no_email">Preencha um email</string>
    <string name="validation_invalid_email">Este e-mail não está correto. Preencha um email válido.</string>
    <string name="validation_taken_email">Este e-mail já está cadastrado. Preencha outro e-mail.</string>

    <!-- Strings -->
    <string name="new_post">O que está pensando?</string>
    <string name="boticario_news">Novidades Boticário</string>
    <string name="main_page">Página principal</string>
    <string name="title_post">"Microblogging</string>

</resources>