<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:gravity="bottom"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior=".services.actions.ExpandedBottomSheetBehavior">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/status_bar"
        android:backgroundTint="@color/white"
        android:outlineProvider="bounds"
        android:visibility="visible">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_full_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="1">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="@dimen/custom_margin"
                            android:layout_marginEnd="@dimen/custom_margin"
                            android:layout_marginBottom="@dimen/custom_margin"
                            android:background="@drawable/text_input_color"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:paddingStart="@dimen/custom_margin"
                            android:textColorHint="@color/HintText" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="@dimen/custom_margin"
                            android:layout_marginEnd="@dimen/custom_margin"
                            android:layout_marginBottom="@dimen/custom_margin"
                            android:background="@drawable/text_input_color"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/custom_margin"
                            android:textColorHint="@color/HintText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/loading"
                        style="?attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="@dimen/custom_margin"
                            android:layout_marginEnd="@dimen/custom_margin"
                            android:layout_marginBottom="@dimen/custom_margin"
                            android:background="@drawable/text_input_color"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/custom_margin"
                            android:textColorHint="@color/HintText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_sign_up"
                        style="@style/FullButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="@dimen/custom_margin"
                        android:text="@string/btn_continue"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sign_in"
                        android:textColor="@color/PrimaryBlack"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.appcompat.widget.LinearLayoutCompat>